# siren

./: .dockerignore  .gitignore  .nvim.lua  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  STREAMING_SPEC.md  compose.yml  flake.nix  pyproject.toml  server.py  test_server.py
.agents/skills/cut-release/: SKILL.md
.codex/skills/cut-release/: SKILL.md
.codex/skills/cut-release/agents/: openai.yaml
.github/workflows/: tests.yml
results/compare-models/: 123025-distil_large_v3-vs-parakeet_tdt_0.6b_v2.md
scripts/: build-push-gpu-image  compare-models.py  recording_durations.py
siren/: server.py  streaming.py
tests/: conftest.py  test_audio_helpers.py  test_model_loading.py  test_server.py  test_websocket.py
