[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[project]
name = "siren"
version = "0.1.0"
description = "OpenAI compatible whisper server with Faster Whisper and Parakeet backends"
requires-python = ">=3.13,<3.14"
dependencies = [
    "braceexpand==0.1.7",
    "cloudpickle==3.1.2",
    "datasets==4.8.4",
    "editdistance==0.8.1",
    "einops==0.8.2",
    "fastapi[standard]==0.124.0",
    "faster-whisper==1.2.1",
    "fiddle==0.3.0",
    "hydra-core==1.3.2",
    "inflect==7.5.0",
    "jiwer==3.1.0",
    "kaldi-python-io==1.2.2",
    "kaldialign==0.9.1",
    "lhotse==1.32.2",
    "librosa==0.11.0",
    "lightning==2.4.0",
    "loguru==0.7.3",
    "marshmallow==4.3.0",
    "mediapy==1.1.6",
    "nemo-toolkit==2.7.2",
    "nv-one-logger-core==2.3.1",
    "nv-one-logger-pytorch-lightning-integration==2.3.1",
    "nv-one-logger-training-telemetry==2.3.1",
    "omegaconf==2.3.0",
    "onnx==1.21.0",
    "optuna==4.8.0",
    "packaging==24.2",
    "pandas==3.0.2",
    "pillow>=12.2.0",
    "pyannote-core==6.0.1",
    "pyannote-metrics==4.0.0",
    "pydantic==2.12.5",
    "pydub==0.25.1",
    "pyloudnorm==0.2.0",
    "python-multipart==0.0.22",
    "resampy==0.4.3",
    "ruamel-yaml==0.19.1",
    "sacrebleu==2.6.0",
    "sacremoses==0.1.1",
    "scipy==1.17.1",
    "sentencepiece==0.2.1",
    "soundfile==0.13.1",
    "sox==1.5.0",
    "torch==2.9.1",
    "torchmetrics==1.9.0",
    "transformers==5.0.0rc3",
    "wandb==0.25.1",
    "webdataset==1.0.2",
    "whisper-normalizer==0.1.12",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython-icat>=0.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "typer>=0.16.0",
    "sqlite-utils>=3.39",
]

[tool.uv.build-backend]
module-name = "siren"
module-root = ""

[tool.uv]
environments = ["sys_platform != 'emscripten' and sys_platform != 'win32'"]
